<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_transport</name>
  <version>1.1.0</version>
  <description>Type Adaption implementation on Qualcomm robotics platforms</description>
  <maintainer email="quic_penwang@quicinc.com">Peng Wang</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>lib_mem_dmabuf</depend>
  <depend>qrb_sensor_client</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
